5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1715_3033.log
== TEST (2019-05-02 16:34:54) 
-- CODE:
n=float(input("valor de x: "))
if(x>=100 or x<0):
	fx=(-(1/n))
	print(round(fx,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(x>=100 or x<0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:35:21) 
-- CODE:
n=float(input("valor de x: "))
if(n>=100 or n<0):
	fx=(-(1/n))
	print(round(fx,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(x>=100 or x<0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:18) 
-- CODE:
n=float(input("valor de x: "))
if(n>=100 or n<0):
	fx=(-(1/n))
	print(round(fx,4))
if(n>0 or n<=100):
	fx=(1/n)
	print(round(fx,4))
else:
	print("entrada invalida")
-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:49) 
-- CODE:
n=float(input("valor de x: "))
if(n>=-100 or n<0):
	fx=(-(1/n))
	print(round(fx,4))
if(n>0 or n<=100):
	fx=(1/n)
	print(round(fx,4))
else:
	print("entrada invalida")
-- OUTPUT:
-0.0109
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:38:29) 
-- CODE:
n=float(input("valor de x: "))
if(n>=-100 or n<0):
	fx=(-(1/n))
	print(round(fx,4))
if(n>0 or n<=100):
	fx=(1/n)
	print(round(fx,4))
if(n<-100 or n>100):
	print("entrada invalida")
-- OUTPUT:
-0.0109
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:39:12) 
-- CODE:
n=float(input("valor de x: "))
if(n>=-100 and n<0):
	fx=(-(1/n))
	print(round(fx,4))
if(n>0 and n<=100):
	fx=(1/n)
	print(round(fx,4))
if(n<-100 and n>100):
	print("entrada invalida")
-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:10) 
-- CODE:
n=float(input("valor de x: "))
if(n>=-100 and n<0):
	fx=(-(1/n))
	print(round(fx,4))
if(n>0 and n<=100):
	fx=(1/n)
	print(round(fx,4))
if(n<-100 and n>100):
	print("entrada invalida")
-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:25) 
-- CODE:
n=float(input("valor de x: "))
if(n>=-100 and n<0):
	fx=(-(1/n))
	print(round(fx,4))
if(n>0 and n<=100):
	fx=(1/n)
	print(round(fx,4))
if(n<-100 and n>100):
	print("entrada invalida")
-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:54) 
-- CODE:
n=float(input("valor de x: "))
if(n>=-100 and n<0):
	fx=(-(1/n))
	print(round(fx,4))
if(n>0 and n<=100):
	fx=(1/n)
	print(round(fx,4))
if(n<-100 or n>100):
	print("entrada invalida")
-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:45:58) 
-- CODE:
n=float(input("valor de x: "))
if(n>=-100 and n<0):
	fx=(-(1/n))
	print(round(fx,4))
if(n>0 and n<=100):
	fx=(1/n)
	print(round(fx,4))
if(n<-100 or n>100):
	print("entrada invalida")
-- EXECUTION TIME:
0.207097
-- TEST CASE 1:
---- input:
92.0
---- correct output:
0.0109
---- user output:
0.0109
-- TEST CASE 2:
---- input:
-55.25
---- correct output:
0.0181
---- user output:
0.0181
-- TEST CASE 3:
---- input:
0.025
---- correct output:
40.0
---- user output:
40.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
